# internet-resource

./: CHANGELOG.md  internet-resource.cabal  notes.md
src/Data/: Bytes.hs
src/Internet/: Domain.hs  Fqdn.hs  Host.hs  Uri.hs
test/: Main.hs
