name: internet-resource
version: 0.1.0.0
synopsis: Efficient implementations of resource identifiers
-- description:
homepage: https://github.com/andrewthad/internet-resource
license: BSD3
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
-- copyright:
category: Network
build-type: Simple
extra-source-files: CHANGELOG.md
cabal-version: >=1.10

library
  exposed-modules:
    Data.Bytes
    Internet.Host
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010
