cabal-version: 2.2
name: internet-resource
version: 0.1.0.0
synopsis: Efficient implementations of resource identifiers
homepage: https://github.com/andrewthad/internet-resource
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2019 Andrew Martin
category: Network
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Internet.Host
  -- other-modules:
  -- other-extensions:
  build-depends:
    , base >=4.12 && <5
    , byteslice >=0.1.1 && <2
    , primitive >=0.7 && <0.8
  hs-source-dirs: src
  ghc-options: -Wall -O2
  default-language: Haskell2010
test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , base
    , byteslice
    , internet-resource
    , tasty
    , tasty-hunit
    , text
    , bytestring
  ghc-options: -Wall -O2
  default-language: Haskell2010
